Fixed margins (too wide for iPhone)

--- a/itrasby/oracles.css
+++ b/itrasby/oracles.css
@@ -18,7 +18,6 @@ h1 {
 
 li {
 	list-style-type: none;
-    margin: 0 1in;
 }
 
 li h1 {
